--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -183,6 +183,11 @@ alias genbotmaps [
 
 genbotmaps "ac_complex ac_mines ac_depot ac_desert"
 
+newmenu master
+
+menuitem "kick player" "showmastermenu 0"
+menuitem "ban player" "showmastermenu 1"
+menuitem "master login" "saycommand /masterlogin "
 
 newmenu editing
 
