--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -45,7 +45,8 @@ newmenu setup
 
 menuitem "Select Team"           "showmenu team"
 menuitem "Select Skins"          "showmenu skins"
-menuitem "Select Weapon"         "showmenu weapons"  
+menuitem "Select Weapon"         "showmenu weapons"
+menuitem "Select Crosshair"		 "showmenu crosshairs"  
 menuitem "Set Name"              "saycommand /name"
 
 newmenu skins
@@ -78,6 +79,22 @@ newmenu team
 menumdl playermodels/terrorist/01/menu 0 197 50 5
 menuitem "Cuban Liberations Army"			"team CLA" "chmenumdl team playermodels/terrorist/01/menu 0 197 50 5"
 menuitem "Rabid Viper Special Forces"		"team RVSF" "chmenumdl team playermodels/counterterrorist/03/menu 0 197 50 5"
+
+
+
+alias gencrosshairs [
+	alias n (listlen $arg1)
+	loop $n [
+		at $arg1 $i
+		alias label $s
+		concat loadcrosshair $s
+		menuitem $label $s
+	]
+]
+
+newmenu crosshairs
+
+gencrosshairs "default.png cube.png dot.png dot_wide.png o.png o_dot.png o_x.png star.png wide.png x-dot.png"
 
 
 newmenu multiplayer
