--- a/ac/config/sounds.cfg
+++ b/ac/config/sounds.cfg
@@ -9,8 +9,8 @@ registersound "weapon/sub"          //S_SUBGUN
 registersound "weapon/sub_reload"           //S_RSUBGUN
 registersound "weapon/sniper"       //S_SNIPER
 registersound "weapon/sniper_reload"           //S_RSNIPER
-registersound "weapon/auto"         //S_ASSULT
-registersound "weapon/auto_reload"           //S_RASSULT
+registersound "weapon/auto"         //S_ASSAULT
+registersound "weapon/auto_reload"           //S_RASSAULT
 registersound "misc/pickup_ammo_clip"           //S_ITEMAMMO
 registersound "misc/pickup_health"           //S_ITEMHEALTH
 registersound "misc/pickup_armour"           //S_ITEMARMOUR
