changed url in about
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@425 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -467,7 +467,7 @@ menuitem "                     ...help" "showmenu help"
 menuitem "                     ...credits" "showmenu credits"
 menuitem ""
 menuitem "by 'Rabid Viper Productions'" "showmenu credits"
-menuitem "http://actioncube.sprintf.org" "echo sorry no built-in web browser yet :)"
+menuitem "http://action.cubers.net" "echo sorry no built-in web browser yet :)"
 menuitem "a cube mod/tc based on the" ""
 menuitem ""
 menuitem "Cube game/engine" " "
