--- a/ac/config/autoexec.cfg
+++ b/ac/config/autoexec.cfg
@@ -4,13 +4,17 @@
 name "unarmed"     // change!
 team "cuber"
 
+skin 0             // player skin
+
+crosshairsize 15
+
 invmouse 0         // 1 for flightsim mode
 sensitivity 25
 sensitivityscale 10
 
 fov 100
 
-alias maxmusicvol 120 // set higher if you want (max 255)
+alias maxmusicvol 0 // set higher if you want (max 255)
 soundvol 150
 
 fpsrange 30 40     // *don't modify* unless you understand it fully
@@ -128,3 +132,4 @@ alias start_intermission [
 
 // play once (1:40)
 sleep 100000 [ fade 1 ]
+
