--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -202,9 +202,11 @@ genbotmaps "ac_complex ac_mines ac_depot ac_desert"
 
 newmenu master
 
-menuitem "kick player" "showmastermenu 0"
-menuitem "ban player" "showmastermenu 1"
-menuitem "master login" "saycommand /masterlogin "
+menuitem "Master Login" "saycommand /masterlogin "
+menuitem "Kick Player" "showmastermenu 0"
+menuitem "Ban Player" "showmastermenu 1"
+menuitem "Remove Bans" "mastercommand 2"
+
 
 newmenu editing
 
@@ -505,3 +507,5 @@ menuitem "JCDPC (Laptop Model, Company), dtd (Hosting), Boeck" ""
 menuitem "Ted Southard (DigitalFlux), Noctua Graphics, Arcitool,"
 menuitem "Craig Fortune, 3dcafe, Rohrschach, lemong.fr,"
 menuitem "Mayang.com, Chris Zastrow, imageafter.com (textures)"
+
+alias master [ showmenu master ]
