--- a/ac/config/servers.cfg
+++ b/ac/config/servers.cfg
@@ -1,6 +1,7 @@
 // servers connected to are added here automatically
 
-addserver 84.227.72.17
-addserver 84.227.72.17
-addserver 84.226.155.46
+addserver 84.227.199.36
+addserver 213.39.162.207
 addserver localhost
+addserver irc.gamesurge.net
+addserver drian
