--- a/ac/source/vcpp/cube.vcproj
+++ b/ac/source/vcpp/cube.vcproj
@@ -181,7 +181,7 @@
 				FavorSizeOrSpeed="2"
 				OmitFramePointers="TRUE"
 				OptimizeForProcessor="2"
-				AdditionalIncludeDirectories="C:\W\cube\enet\include;C:\w\cube\include"
+				AdditionalIncludeDirectories="..\enet\include;..\include"
 				PreprocessorDefinitions="WIN32,NDEBUG,_CONSOLE,USE_ENET"
 				StringPooling="TRUE"
 				MinimalRebuild="TRUE"
@@ -205,11 +205,11 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalOptions="/MACHINE:I386"
-				AdditionalDependencies="msvcrt.lib zlib.lib opengl32.lib glu32.lib SDLmain.lib SDL.lib SDL_image.lib ws2_32.lib SDL_mixer.lib fmodvc.lib"
-				OutputFile="c:\w\cube\cube\bin\cube.exe"
+				AdditionalDependencies="msvcrt.lib zlib.lib opengl32.lib glu32.lib SDLmain.lib SDL.lib SDL_image.lib ws2_32.lib SDL_mixer.lib fmodvc.lib winmm.lib"
+				OutputFile="..\..\bin_win32\ac_client.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
-				AdditionalLibraryDirectories="C:\w\cube\lib"
+				AdditionalLibraryDirectories="..\lib"
 				IgnoreAllDefaultLibraries="TRUE"
 				GenerateDebugInformation="TRUE"
 				ProgramDatabaseFile=".\Release/cube.pdb"
