map change master
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@446 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -203,6 +203,7 @@ genbotmaps "ac_complex ac_mines ac_depot ac_desert"
 newmenu master
 
 menuitem "Master Login" "saycommand /masterlogin "
+menuitem "Change Mode/Map" "showmenu gamemode"
 menuitem "Kick Player" "showmastermenu 0"
 menuitem "Ban Player" "showmastermenu 1"
 menuitem "Remove Bans" "mastercommand 2"
