fixed map clipping
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@491 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/packages/maps/ac_depot.cfg
+++ b/ac/packages/maps/ac_depot.cfg
@@ -7,7 +7,7 @@ fogcolour 0
 mapmodelreset // start @ zero
 
 mapmodel 0 0 0 0 "nothing"
-mapmodel 0 0 0 0 "nothing"
+mapmodel 2 16 0 0 "nothing_depot"
 mapmodel 0 0 0 0 "nothing"
 mapmodel 3  1 0 0 "comp_bridge"    //3
 mapmodel 0 10 0 0 "ladder_10x"     //4
@@ -31,7 +31,7 @@ mapmodel 0 0 0 0 "picture1"        //19        If you wish to put a custom pic i
 //                                             use skin_blanco.jpg
 //                                             please make a new folder,
 //                                             preferably called picture1_yourmapname. 
-mapmodel 5 3 0 0 "gastank"         //20 see mapmodels/gastank/usage.txt
+mapmodel 0 0 0 0 "gastank"         //20 see mapmodels/gastank/usage.txt
 mapmodel 2 4 0 0 "dumpster"        //21
 mapmodel 1 12 0 0 "streetlamp"     //22
 mapmodel 0 0 0 0 "strahler"        //23
@@ -43,7 +43,7 @@ mapmodel 1 8 0 0 "fence"           //28     "   "      "     "    "     "
 mapmodel 0 2 0 0 "roadblock01"     //29   use nothing mapmodels to clip
 mapmodel 0 2 0 0 "roadblock02"     //30
 mapmodel 0 0 0 0 "fag"             //31
-mapmodel 0 0 0 0 "nothing"         //32   alter the values in your map.cfg and use to clip 
+mapmodel 4 5 0 0 "nothing"         //32   alter the values in your map.cfg and use to clip 
 //                                        models that can´t be clipped properly otherwise
 mapmodel 0 0 0 0 "wood01"         //33
 mapmodel 0 0 0 0 "hook"           //34
@@ -60,6 +60,7 @@ mapmodel 0 7 0 0 "ladder_7x"      //44
 mapmodel 0 8 0 0 "ladder_8x"      //45
 mapmodel 1 8 0 0 "fencegate_closed"      //46
 mapmodel 1 8 0 0 "fencegate_open"      //47
+
 
 
 
