*** empty log message ***
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@521 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/packages/maps/ac_mines.cfg
+++ b/ac/packages/maps/ac_mines.cfg
@@ -321,6 +321,11 @@ texture 0 "./makke/rock.jpg"
 texture 0 "./zastrow/2wood_crate_10.jpg"
 texture 0 "./zastrow/3wood_crate_10.jpg"
 texture 0 "./zastrow/wood_crate_10.jpg" // If you want use more crates, uncomment these lines
+texture 0 "./makke/klappe3.jpg"
+texture 0 "./makke/metalstair1.jpg"
+texture 0 "./makke/metalstair2.jpg"
+texture 0 "./makke/lampe.jpg"
+texture 0 "./noctua/wood/planks02_hor.jpg"
 // texture 0 "./2wood_crate_02.jpg"          
 // texture 0 "./2wood_crate_03.jpg"
 // texture 0 "./2wood_crate_05.jpg"
