--- a/ac/packages/maps/ac_depot.cfg
+++ b/ac/packages/maps/ac_depot.cfg
@@ -370,6 +370,7 @@ texture 0 "./zastrow/wood_crate_12.jpg"
 texture 0 "./zastrow/2wood_crate_10.jpg"
 texture 0 "./zastrow/3wood_crate_10.jpg"
 texture 0 "./zastrow/wood_crate_10.jpg" // If you want use more crates, uncomment these lines
+texture 0 "./makke/klappe3.jpg"
 // texture 0 "./2wood_crate_02.jpg"          
 // texture 0 "./2wood_crate_03.jpg"
 // texture 0 "./2wood_crate_05.jpg"
