*** empty log message ***
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@525 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/autoexec.cfg
+++ b/ac/config/autoexec.cfg
@@ -31,6 +31,7 @@ hidestats 1
 
 bind F6 showmip
 bind F5 toggleocull
+bind F11 toggleconsole
 
 bind F8 "savegame quicksave"
 bind F9 "loadgame quicksave"
