--- a/ac/packages/maps/ac_depot.cfg
+++ b/ac/packages/maps/ac_depot.cfg
@@ -7,7 +7,7 @@ fogcolour 0
 mapmodelreset // start @ zero
 
 mapmodel 0 0 0 0 "nothing"
-mapmodel 2 16 0 0 "nothing_depot"
+mapmodel 2 16 0 0 "nothing"
 mapmodel 0 0 0 0 "nothing"
 mapmodel 3  1 0 0 "comp_bridge"    //3
 mapmodel 0 10 0 0 "ladder_10x"     //4
