*** empty log message ***
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@547 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/source/src/Makefile
+++ b/ac/source/src/Makefile
@@ -12,14 +12,14 @@ CLIENT_OBJS= \
 	console.o \
 	editing.o \
 	entities.o \
+	hudgun.o \
 	main.o \
 	menus.o \
 	physics.o \
 	rendercubes.o \
 	renderextras.o \
 	rendergl.o \
-	rendermd2.o \
-	rendermd3.o \
+	rendermodel.o \
 	renderparticles.o \
 	rendertext.o \
 	rndmap.o \
