*** empty log message ***
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@548 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -14,7 +14,7 @@ menuitem "About/Credits/Help"       "showmenu about"
 menuitem "Quit"						"quit"
 
 
-// menumdl path frame range rotation-speed{0..100} scale{0..100}
+// menumdl path anim rotation-speed{0..100} scale{0..100}
 // chmenumdl menuname newpath
 
 alias genmapitems [
@@ -56,29 +56,29 @@ menuitem "RVSF Skins"             "showmenu rvsf"
 
 newmenu "cla"
 
-menumdl playermodels/terrorist/01/menu 0 197 50 5
-menuitem "Comandante"		"skin 0" "chmenumdl cla playermodels/terrorist/01/menu 0 197 50 5"
-menuitem "Psycho"               "skin 1" "chmenumdl cla playermodels/terrorist/02/menu 0 197 50 5"
-menuitem "Bomber"               "skin 2" "chmenumdl cla playermodels/terrorist/03/menu 0 197 50 5"
-menuitem "Ripper"               "skin 3" "chmenumdl cla playermodels/terrorist/04/menu 0 197 50 5"
+menumdl playermodels/terrorist/01 all 50 4
+menuitem "Comandante"           "skin 0" "chmenumdl cla playermodels/terrorist/01 all 50 4"
+menuitem "Psycho"               "skin 1" "chmenumdl cla playermodels/terrorist/02 all 50 4"
+menuitem "Bomber"               "skin 2" "chmenumdl cla playermodels/terrorist/03 all 50 4"
+menuitem "Ripper"               "skin 3" "chmenumdl cla playermodels/terrorist/04 all 50 4"
 
 
 newmenu "rvsf"
 
-menumdl playermodels/counterterrorist/01/menu 0 197 50 5
-menuitem "Alpha"            "skin 0" "chmenumdl rvsf playermodels/counterterrorist/01/menu 0 197 50 5"
-menuitem "Tango"            "skin 1" "chmenumdl rvsf playermodels/counterterrorist/02/menu 0 197 50 5"
-menuitem "Cobra"            "skin 2" "chmenumdl rvsf playermodels/counterterrorist/03/menu 0 197 50 5"
-menuitem "Viper"            "skin 3" "chmenumdl rvsf playermodels/counterterrorist/04/menu 0 197 50 5"
-menuitem "Swat"             "skin 4" "chmenumdl rvsf playermodels/counterterrorist/05/menu 0 197 50 5"
-menuitem "Police"           "skin 5" "chmenumdl rvsf playermodels/counterterrorist/06/menu 0 197 50 5"
+menumdl playermodels/counterterrorist/01 all 50 4
+menuitem "Alpha"            "skin 0" "chmenumdl rvsf playermodels/counterterrorist/01 all 50 4"
+menuitem "Tango"            "skin 1" "chmenumdl rvsf playermodels/counterterrorist/02 all 50 4"
+menuitem "Cobra"            "skin 2" "chmenumdl rvsf playermodels/counterterrorist/03 all 50 4"
+menuitem "Viper"            "skin 3" "chmenumdl rvsf playermodels/counterterrorist/04 all 50 4"
+menuitem "Swat"             "skin 4" "chmenumdl rvsf playermodels/counterterrorist/05 all 50 4"
+menuitem "Police"           "skin 4" "chmenumdl rvsf playermodels/counterterrorist/06 all 50 4"
 
 
 newmenu team
 
-menumdl playermodels/terrorist/01/menu 0 197 50 5
-menuitem "Cuban Liberations Army"			"team CLA" "chmenumdl team playermodels/terrorist/01/menu 0 197 50 5"
-menuitem "Rabid Viper Special Forces"		"team RVSF" "chmenumdl team playermodels/counterterrorist/03/menu 0 197 50 5"
+menumdl playermodels/terrorist/01 all 50 4
+menuitem "Cuban Liberations Army"			"team CLA" "chmenumdl team playermodels/terrorist/01 all 50 4"
+menuitem "Rabid Viper Special Forces"		"team RVSF" "chmenumdl team playermodels/counterterrorist/03 all 50 4"
 
 
 
@@ -400,21 +400,21 @@ bind B "showmenu weapons"
 
 newmenu "weapons"
 
-menumdl weapons/assault/menu 0 1 75 12
-menuitem "Mtp 57 Assault Rifle"			"item 5;echo MK-77 Assault Rifle chosen" "chmenumdl weapons weapons/assault/menu 0 1 75 12"
-menuitem "A-ARD/10 Submachine Gun"		"item 3;echo A-ARD/10 Submachine Gun chosen" "chmenumdl weapons weapons/subgun/menu 0 1 75 12"
-menuitem "Precision Tech AD-81 Sniper Rifle"     "item 4,echo Precision Tech AD-81 Sniper Rifle chosen" "chmenumdl weapons weapons/sniper/menu 0 1 75 12"
-menuitem "V-19 Combat Shotgun"			"item 2;echo V-19 Combat Shotgun chosen" "chmenumdl weapons weapons/shotgun/menu 0 1 75 12"
+menumdl weapons/assault/menu mapmodel 75 12
+menuitem "Mtp 57 Assault Rifle"			"item 5;echo MK-77 Assault Rifle chosen" "chmenumdl weapons weapons/assault/menu mapmodel 75 12"
+menuitem "A-ARD/10 Submachine Gun"		"item 3;echo A-ARD/10 Submachine Gun chosen" "chmenumdl weapons weapons/subgun/menu mapmodel 75 12"
+menuitem "Precision Tech AD-81 Sniper Rifle"     "item 4,echo Precision Tech AD-81 Sniper Rifle chosen" "chmenumdl weapons weapons/sniper/menu mapmodel 75 12"
+menuitem "V-19 Combat Shotgun"			"item 2;echo V-19 Combat Shotgun chosen" "chmenumdl weapons weapons/shotgun/menu mapmodel 75 12"
 
 
 //newmenu "secondary"
-//menumdl vwep/semipistol 0 1 40 60
+//menumdl vwep/semipistol mapmodel 40 60
 //menuitem "Mk-77 Semi-Automatic Pistol"	        "item 1;echo MTP 57 Semi-Automatic Pistol Chosen" 
 
 //newmenu "equipment"
-//menumdl vwep/grenade_static 0 1 40 80
-//menuitem "DR-17 HE-Grenade"			"echo DR-17 HE-Grenade chosen" "chmenumdl equipment vwep/grenade_static 0 1 40 80"
-//menuitem "SN-Tech Kelvar Vest"			"echo SN-Tech Kelvar Vest chosen" "chmenumdl equipment pickups/kevlar 0 1 40 20"
+//menumdl vwep/grenade_static mapmodel 40 80
+//menuitem "DR-17 HE-Grenade"			"echo DR-17 HE-Grenade chosen" "chmenumdl equipment vwep/grenade_static mapmodel 40 80"
+//menuitem "SN-Tech Kelvar Vest"			"echo SN-Tech Kelvar Vest chosen" "chmenumdl equipment pickups/kevlar mapmodel 40 20"
 
 newmenu options
 
